# -EDD-Proyecto_202001523

./: CMakeLists.txt  README.md  main.cpp
Archivos de Entrada/: Publicaciones.json  Solicitudes.json  Usuarios.json
Fase_1/: main.cpp
Fase_1/Archivos de Entrada/: Publicaciones.json  Solicitudes.json  Usuarios.json
Fase_1/Headers/: Linkedlist.h  ListPubliacion.h  ListaSolicitud.h  NodoS.h  Usuario.h
Fase_1/Listas/: CargaMasiva.cpp  Linkedlist.cpp  ListPublicacion.cpp  ListaSolicitud.cpp  Usuario.cpp  menuUser.cpp
Fase_2/: CMakeLists.txt  ListaSimple.h  NodoABB.h  Stack.h  abb.cpp  abb.h  arbolavl.cpp  arbolavl.h  arbolb.h  cargamasiva.cpp  cargamasiva.h  formadmin.cpp  formadmin.h  formadmin.ui  formregistro.cpp  formregistro.h  formregistro.ui  formuser.cpp  formuser.h  formuser.ui  graph.cpp  graph.h  listadoble.cpp  listadoble.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  nodoG.h  nodoavl.cpp  nodoavl.h  user.cpp  user.h
Fase_2/Forms/: formususario.cpp  formususario.h  formususario.ui  registrarse.cpp  registrarse.h  registrarse.ui
Fase_3/: CMakeLists.txt  Comentario.h  Usuario.ui  arbolavl.cpp  arbolavl.h  arbolb.cpp  formadmin.h  formuser.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  nodoG.h  nodoavl.cpp  nodoavl.h  nodocomentario.h  nodolistadoble.cpp  nodolistadoble.h  user.cpp  user.h
Headers/: CargaMasiva.h  Linkedlist.h  ListPubliacion.h  ListaSolicitud.h  Publicacion.h  SolicitudAmistad.h  Usuario.h  menuUser.h  pruebas.cpp
Listas/: CargaMasiva.cpp  Linkedlist.cpp  ListPublicacion.cpp  ListaSolicitud.cpp  Usuario.cpp  menuUser.cpp
